java线程笔记提交

--- a/java笔记/线程/线程进阶.md
+++ b/java笔记/线程/线程进阶.md
@@ -835,14 +835,342 @@ AtomicReference说明：
 （1）通过将value设置为volatile类型。这保证了线程修改value的值时，其他线程看到的value值都是最新的value值，即修改之后的volatile的值。 
 （2）通过CAS设置value。这保证了：当某线程通过CAS函数（compareAndSet函数）设置value时，它的操作是原子的，即线程在操作value时不会别中断。
 
+### 3.2.2 AtomicStampedReference 和 AtomicMarkableReference
+
+​		前面介绍了AtomicInteger和Atomiclong的操作，但是在这两个类在CAS操作的时候会遇到ABA问题：简单来将就是多线程环境下，2次读写中一个线程修改A->B，然后又B->A，另一个线程看到的值未改变，又继续修改成自己的期望值。当然如果我们不关心过程，只关心结果，那么这个就是无所谓的ABA问题。为了解决ABA问题，Java为我们提供了AtomicStampedReference和AtomicMarkableReference类，两者的区别是：AtomicStampedReference侧重你改变了几次值，AtomicMarkableReference侧重你是否改变了值。
+
+```java
+package com.zjl.javase.thread;
+
+import java.util.concurrent.atomic.AtomicMarkableReference;
+import java.util.concurrent.atomic.AtomicStampedReference;
+
+public class AtomicStampedReferenceTest {
+	/**
+     * @param args
+     */
+    public static void main(String[] args) {
 
 
+        final AtomicStampedReference<Integer> stampedReference = new AtomicStampedReference(10,0);
+        final int stamp = stampedReference.getStamp();
+        final int reference = stampedReference.getReference();
+
+        final AtomicMarkableReference<Integer> markableReference = new AtomicMarkableReference(10,true);
+        final int getmarkAbleReference = markableReference.getReference();
+        final boolean mark = markableReference.isMarked();
+
+        System.out.println("stamp的值为："+stamp+"\n"+"reference的值为："+reference);
+        System.out.println("mark的值为："+stamp+"\n"+"getmarkAbleReference的值为："+reference);
+
+        Thread t1 = new Thread(new Runnable(){
+
+            public void run() {
+                boolean isUpdateSuccess = stampedReference.compareAndSet(reference, reference+10, stamp, stamp+1);
+                System.out.println(Thread.currentThread().getName()+" isUpdateSuccess:"+isUpdateSuccess);
+
+                boolean isMarkable = markableReference.compareAndSet(getmarkAbleReference, getmarkAbleReference+10, mark, false);
+                System.out.println(Thread.currentThread().getName()+" isMarkable:"+isMarkable);
+            }
+
+        });
+
+        Thread t2 = new Thread(new Runnable(){
+
+            public void run() {
+                boolean isUpdateSuccess = stampedReference.compareAndSet(reference, reference+10, stamp, stamp+1);
+                System.out.println(Thread.currentThread().getName()+" isUpdateSuccess:"+isUpdateSuccess);
+
+                boolean isMarkable = markableReference.compareAndSet(getmarkAbleReference, getmarkAbleReference+10, mark, false);
+                System.out.println(Thread.currentThread().getName()+" isMarkable:"+isMarkable);
+            }
+
+        });
+
+        try {
+            t1.start();
+            t1.join();
+            t2.start();
+            t2.join();
+        } catch (InterruptedException e) {
+            // TODO Auto-generated catch block
+            e.printStackTrace();
+        }
+
+        System.out.println("stamp的值为："+stampedReference.getStamp()+"\n"+"reference的值为："+stampedReference.getReference());
+        System.out.println("mark的值为："+ markableReference.isMarked()+"\n"+"getmarkAbleReference的值为："+markableReference.getReference());
+
+    }
+
+}
+
+运行结果：
+stamp的值为：0
+reference的值为：10
+mark的值为：0
+getmarkAbleReference的值为：10
+Thread-0 isUpdateSuccess:true
+Thread-0 isMarkable:true
+Thread-1 isUpdateSuccess:false
+Thread-1 isMarkable:false
+stamp的值为：1
+reference的值为：20
+mark的值为：false
+getmarkAbleReference的值为：20
+```
+
+结果说明：
+
+​		可以看到在线程t2更新stampedReference的值时失败了，因为版本号改变了或是标记（mark）改变了，所以AtomicStampedReference和AtomicMarkableReference可以帮我们解决CAS操作中的ABA问题。
+注意:	
+
+​		AtomicMarkableReference它并不能解决ABA的问题 ，它是通过一个boolean来标记是否更改，本质就是只有true和false两种版本来回切换，只能降低ABA问题发生的几率，并不能阻止ABA问题的发生。
+
+## 3.3 数组原子类
+
+​	除了提供基本数据类型外，JDK还为我们准备了数组等复合结构。当前可用的原子数组有：**AtomicIntegerArray、AtomicLongArray和AtomicReferenceArray**，分别表示整数数组、long型数组和普通对象数组。
+
+### 3.3.1 AtomicIntegerArray
+
+​	列举AtomicIntegerArray的几个核心API
+
+```JAVA
+AtomicIntegerArray本质上是对int[]类型的封装。使用Unsafe类通过CAS的方式控制int[]在多线程下的安全性。它提供了以下几个核心API：
+//获得数组第i个下标的元素
+public final int get(int i)
+//获得数组的长度
+public final int length()
+//将数组第i个下标设置为newValue，并返回旧的值
+public final int getAndSet(int i, int newValue)
+//进行CAS操作，如果第i个下标的元素等于expect，则设置为update，设置成功返回true
+public final boolean compareAndSet(int i, int expect, int update)
+//将第i个下标的元素加1
+public final int getAndIncrement(int i)
+//将第i个下标的元素减1
+public final int getAndDecrement(int i)
+//将第i个下标的元素增加delta（delta可以是负数）
+public final int getAndAdd(int i, int delta)
+```
+
+```java
+package com.zjl.javase.thread;
+
+import java.util.concurrent.atomic.AtomicIntegerArray;
+
+public class AtomicIntegerArrayTest {
+	static AtomicIntegerArray integerArray = new AtomicIntegerArray(10);
+
+    public static class AddThread implements Runnable{
+
+        int j = 0;
+
+        public void run() {
+            for(int i=0;i<10000;i++){
+                integerArray.getAndIncrement(i%integerArray.length());
+            }
+
+        }
+
+    }
+
+    public static void main(String[] args) {
+
+        Thread[] ts = new Thread[10];
+        for(int i=0;i<10;i++){
+            ts[i] = new Thread(new AddThread());
+        }
+
+        for(int i=0;i<10;i++){
+            ts[i].start();
+        }
+        for(int i=0;i<10;i++){
+            try {
+                ts[i].join();
+            } catch (InterruptedException e) {
+                // TODO Auto-generated catch block
+                e.printStackTrace();
+            }
+        }
+
+        System.out.println(integerArray);
+    }
+
+}
+运行结果：
+[10000, 10000, 10000, 10000, 10000, 10000, 10000, 10000, 10000, 10000]
+```
+
+	说明：
+		首先，新建了10个AtomicIntegerArray类型的数组，然后在Runable内对数组内10个元素进行累加操作，每个元素各加1000次，然后再开启10个线程。因此，可以预测，如果线程安全，数组内10个元素的值必然都是10000；反之，如果线程不安全，则部分或者全部数值会小于10000。
+### 3.3.2 AtomicLongArray 和 AtomicReferenceArray
+
+​	AtomicLongArray和AtomicReferenceArray的用法和AtomicIntegerArray 的用法都是大同小异，具体的方法在这里就不一一介绍了，用法同AtomicIntegerArray
+
+## 3.4 对象属性修改原子类
+
+​	基本原子类和数组原子类在最初设计编码时候就已经考虑到了需要保证原子性。但是往往有很多情况就是，由于需求的更改，原子性需要在后面加入，类似于我**不要求你这整个类操作具有原子性，只要求类里面一个字段操作具有原子性**。所以，**AtomicIntegerFiledUpdater、AtomicLongFieldUpdater和AtomicReferenceFieldUpdater**就是这个作用。
+
+### 3.4.1 AtomicLongFiledUpdater
+
+**AtomicIntegerFiledUpdater就是用来更新某一个实例对象里面的int属性的**，但是需要注意的是，用法上有如下规则：
+（1）**字段必须是volatile类型的**，在线程之间共享变量时保证立即可见。
+（2）**字段的描述类型（修饰符public/protected/default/private）是与调用者与操作对象字段的关系一致**。也就是说**调用者能过直接操作对象字段，那么就可以反射进行原子操作**。
+（3）**对于父类的字段，子类时不能直接操作的**，尽管子类可以访问父类的字段。
+（4）**只能是实例变量，不能是类变量，也就是说不能加static关键字**
+（5）**只能是可修改变量，不能使final变量，因为final的语义就是不可修改的**
+（6）**对于AtomicIntegerFiledUpdater和AtomicLongFiledUpdater只能修改int/long类型的字段，不能修改其包装类型（Integer/Long）**。如果要**修改包装类型就需要使用AtomicReferenceFiledUpdater**。
+
+AtomicLongFieldUpdater的主要函数列表：
+
+```java
+// 受保护的无操作构造方法，供子类使用。
+protected AtomicLongFieldUpdater()
+
+// 以原子方式将给定值添加到此更新器管理的给定对象的字段的当前值。
+long addAndGet(T obj, long delta)
+// 如果当前值 == 预期值，则以原子方式将此更新器所管理的给定对象的字段设置为给定的更新值。
+abstract boolean compareAndSet(T obj, long expect, long update)
+// 以原子方式将此更新器管理的给定对象字段当前值减 1。
+long decrementAndGet(T obj)
+// 获取此更新器管理的在给定对象的字段中保持的当前值。
+abstract long get(T obj)
+// 以原子方式将给定值添加到此更新器管理的给定对象的字段的当前值。
+long getAndAdd(T obj, long delta)
+// 以原子方式将此更新器管理的给定对象字段当前值减 1。
+long getAndDecrement(T obj)
+// 以原子方式将此更新器管理的给定对象字段的当前值加 1。
+long getAndIncrement(T obj)
+// 将此更新器管理的给定对象的字段以原子方式设置为给定值，并返回旧值。
+long getAndSet(T obj, long newValue)
+// 以原子方式将此更新器管理的给定对象字段当前值加 1。
+long incrementAndGet(T obj)
+// 最后将此更新器管理的给定对象的字段设置为给定更新值。
+abstract void lazySet(T obj, long newValue)
+// 为对象创建并返回一个具有给定字段的更新器。
+static <U> AtomicLongFieldUpdater<U> newUpdater(Class<U> tclass, String fieldName)
+// 将此更新器管理的给定对象的字段设置为给定更新值。
+abstract void set(T obj, long newValue)
+// 如果当前值 == 预期值，则以原子方式将此更新器所管理的给定对象的字段设置为给定的更新值。
+abstract boolean weakCompareAndSet(T obj, long expect, long update)
+```
+
+```java
+package com.zjl.javase.thread;
+
+import java.util.concurrent.atomic.AtomicLongFieldUpdater;
+
+public class AtomicLongFiledUpdaterTest {
+	/**
+     * @param args
+     */
+    public static void main(String[] args) {
 
 
+        //获取student的class对象
+        Class cls = Student2.class;
+         // 新建AtomicLongFieldUpdater对象，传递参数是“class对象”和“long类型在类中对应的名称”
+        AtomicLongFieldUpdater atoLong = AtomicLongFieldUpdater.newUpdater(cls, "age");
+        Student2 stu = new Student2(123456L);
 
+        atoLong.compareAndSet(stu, 123456L, 1000);
+        System.out.println("age= "+stu.age);
 
+    }
+}
 
+class Student2{
+	volatile long age;
 
+	public long getAge() {
+		return age;
+	}
 
+	public void setAge(long age) {
+		this.age = age;
+	}
 
-​	
+	public Student2(long age) {
+		super();
+		this.age = age;
+	}
+	
+}
+运行结果：
+age= 1000
+```
+
+**AtomicIntegerFieldUpdater是一个抽象类，但是它内部有一个private final类型的默认子类，所以在调用newUpdater的时候，会用模式子类来实现**：
+
+```java
+ public static <U> AtomicLongFieldUpdater<U> newUpdater(Class<U> tclass, String fieldName) {
+        if (AtomicLong.VM_SUPPORTS_LONG_CAS)
+            return new CASUpdater<U>(tclass, fieldName);
+        else
+            return new LockedUpdater<U>(tclass, fieldName);
+}
+
+```
+
+​	newUpdater()的作用是**获取一个AtomicIntegerFieldUpdater类型的对象。它实际返回的是CASUpdater对象，或者LockedUpdater对象**；具体返回哪一个类取决于JVM是否支持long类型的CAS函数。CASUpdater和LockedUpdater都是AtomicIntegerFieldUpdater的子类，它们的实现类似。下面以CASUpdater来进行说明。
+
+CASUpdater类的源码如下：
+
+```java
+ private static class CASUpdater<T> extends AtomicLongFieldUpdater<T> {
+        private static final Unsafe unsafe = Unsafe.getUnsafe();
+        private final long offset;
+        private final Class<T> tclass;
+        private final Class<?> cclass;
+
+        CASUpdater(final Class<T> tclass, final String fieldName,
+                   final Class<?> caller) {
+            final Field field;
+            final int modifiers;
+            try {
+                field = AccessController.doPrivileged(
+                    new PrivilegedExceptionAction<Field>() {
+                        public Field run() throws NoSuchFieldException {
+                            return tclass.getDeclaredField(fieldName);
+                        }
+                    });
+                modifiers = field.getModifiers();
+                sun.reflect.misc.ReflectUtil.ensureMemberAccess(
+                    caller, tclass, null, modifiers);
+                ClassLoader cl = tclass.getClassLoader();
+                ClassLoader ccl = caller.getClassLoader();
+                if ((ccl != null) && (ccl != cl) &&
+                    ((cl == null) || !isAncestor(cl, ccl))) {
+                  sun.reflect.misc.ReflectUtil.checkPackageAccess(tclass);
+                }
+            } catch (PrivilegedActionException pae) {
+                throw new RuntimeException(pae.getException());
+            } catch (Exception ex) {
+                throw new RuntimeException(ex);
+            }
+
+            Class<?> fieldt = field.getType();
+            if (fieldt != long.class)
+                throw new IllegalArgumentException("Must be long type");
+
+            if (!Modifier.isVolatile(modifiers))
+                throw new IllegalArgumentException("Must be volatile type");
+
+            this.cclass = (Modifier.isProtected(modifiers) &&
+                           caller != tclass) ? caller : null;
+            this.tclass = tclass;
+            offset = unsafe.objectFieldOffset(field);
+        }
+```
+
+```java
+public boolean compareAndSet(T obj, long expect, long update) {
+    if (obj == null || obj.getClass() != tclass || cclass != null) fullCheck(obj);
+    return unsafe.compareAndSwapLong(obj, offset, expect, update);
+}
+```
+
+它实际上是通过CAS函数操作。如果类的long对象的值是expect，则设置它的值为update。
+
+### 3.4.2 AtomicIntegerFiledUpdater 和 AtomicReferenceFiledUpdater
+
+**AtomicIntegerFiledUpdater 和AtomicReferenceFieldUpdater实现思想基本一致**
