java线程笔记提交

--- a/web相关/mybatis/20200110Mybatis中的九种设计模式.md
+++ b/web相关/mybatis/20200110Mybatis中的九种设计模式.md
@@ -18,7 +18,7 @@ Mybatis至少遇到了以下的设计模式的使用：
 
 ​	Builder模式的定义是“将一个复杂对象的构建与它的表示分离，使得同样的构建过程可以创建不同的表示。”，它属于创建类模式，一般来说，如果一个对象的构建比较复杂，超出了构造函数所能包含的范围，就可以使用工厂模式和Builder模式，相对于工厂模式会产出一个完整的产品，Builder应用于更加复杂的对象的构建，甚至只会构建产品的一个部分。
 
-![](\资源文件\202001100901bulider模式.jpg)
+![](202001100901bulider模式.jpg)
 
 ​	在Mybatis环境的初始化过程中，SqlSessionFactoryBuilder会调用XMLConfigBuilder读取所有的MybatisMapConfig.xml和所有的*Mapper.xml文件，构建Mybatis运行的核心对象Configuration对象，然后将该Configuration对象作为参数构建一个SqlSessionFactory对象。
 
@@ -28,7 +28,7 @@ Mybatis至少遇到了以下的设计模式的使用：
 
 对于builder的具体类，方法都大都用build*开头，比如SqlSessionFactoryBuilder为例，它包含以下方法：
 
-![](\资源文件\202001100901SqlSessionFactoryBuilder中类.jpg)
+![](202001100901SqlSessionFactoryBuilder中类.jpg)
 
 即根据不同的输入参数来构建SqlSessionFactory这个工厂对象。
 
@@ -38,13 +38,13 @@ Mybatis至少遇到了以下的设计模式的使用：
 
 ​	简单工厂模式(Simple Factory Pattern)：又称为静态工厂方法(Static Factory Method)模式，它属于类创建型模式。在简单工厂模式中，可以根据参数的不同返回不同类的实例。简单工厂模式专门定义一个类来负责创建其他类的实例，被创建的实例通常都具有共同的父类。
 
-![](\资源文件\202001100901SimpleFactory.jpg)
+![](202001100901SimpleFactory.jpg)
 
 
 
 SqlSession可以认为是一个Mybatis工作的核心的接口，通过这个接口可以执行执行SQL语句、获取Mappers、管理事务。类似于连接MySQL的Connection对象。
 
-![](\资源文件\202001100901SqlSession.jpg)
+![](202001100901SqlSession.jpg)
 
 ​	可以看到，该Factory的openSession方法重载了很多个，分别支持autoCommit、Executor、Transaction等参数的输入，来构建核心的SqlSession对象。
 
@@ -97,7 +97,7 @@ public final classLogFactory{
 
 单例模式的要点有三个：一是某个类只能有一个实例；二是它必须自行创建这个实例；三是它必须自行向整个系统提供这个实例。单例模式是一种对象创建型模式。单例模式又名单件模式或单态模式。
 
-![](\资源文件\202001100901Singleton模式.jpg)
+![](202001100901Singleton模式.jpg)
 
 ​	在Mybatis中有两个地方用到单例模式，ErrorContext和LogFactory，其中ErrorContext是用在每个线程范围内的单例，用于记录该线程的执行环境错误信息，而LogFactory则是提供给整个Mybatis使用的日志工厂，用于获得针对项目配置好的日志对象。
 
@@ -137,9 +137,9 @@ public classErrorContext{
 - Proxy: 代理主题角色
 - RealSubject: 真实主题角色
 
-![](\资源文件\202001100901Proxy模式.jpg)
+![](202001100901Proxy模式.jpg)
 
-![](\资源文件\202001100901seq_Proxy模式.jpg)
+![](202001100901seq_Proxy模式.jpg)
 
 ​	这里有两个步骤，第一个是提前创建一个Proxy，第二个是使用的时候会自动请求Proxy，然后由Proxy来执行具体事务；
 
@@ -212,7 +212,7 @@ public classMapperProxy<T> implementsInvocationHandler, Serializable {
 
 ​	在使用组合模式中需要注意一点也是组合模式最关键的地方：叶子对象和组合对象实现相同的接口。这就是组合模式能够将叶子节点和对象节点进行一致处理的原因。
 
-![](\资源文件\202001100901组合模式.jpg)
+![](202001100901组合模式.jpg)
 
 Mybatis支持动态SQL的强大功能，比如下面的这个SQL：
 
@@ -246,7 +246,7 @@ public interfaceSqlNode{
 
 对于实现该SqlSource接口的所有节点，就是整个组合模式树的各个节点：
 
-![](\资源文件\202001100901SqlSource.jpg)
+![](202001100901SqlSource.jpg)
 
 ​	组合模式的简单之处在于，所有的子节点都是同一类节点，可以递归的向下执行，比如对于TextSqlNode，因为它是最底层的叶子节点，所以直接将对应的内容append到SQL语句中：
 
@@ -282,11 +282,11 @@ public interfaceSqlNode{
 
 ​	模板类定义一个操作中的算法的骨架，而将一些步骤延迟到子类中。使得子类可以不改变一个算法的结构即可重定义该算法的某些特定步骤。
 
-![](\资源文件\202001100901模板方法模式.jpg)
+![](202001100901模板方法模式.jpg)
 
 在Mybatis中，sqlSession的SQL执行，都是委托给Executor实现的，Executor包含以下结构：
 
-![](\资源文件\202001100901Executor.jpg)
+![](202001100901Executor.jpg)
 
 其中的BaseExecutor就采用了模板方法模式，它实现了大部分的SQL执行逻辑，然后把以下几个方法交给子类定制化完成：
 
@@ -331,7 +331,7 @@ protectedabstractintdoUpdate(MappedStatement ms, Object parameter) throws SQLExc
 
 适配器模式(Adapter Pattern) ：将一个接口转换成客户希望的另一个接口，适配器模式使接口不兼容的那些类可以一起工作，其别名为包装器(Wrapper)。适配器模式既可以作为类结构型模式，也可以作为对象结构型模式。
 
-![](\资源文件\202001100901Adapter模式.jpg)
+![](202001100901Adapter模式.jpg)
 
 在Mybatsi的logging包中，有一个Log接口：
 
@@ -357,7 +357,7 @@ public interfaceLog{
 
 ​	该接口定义了Mybatis直接使用的日志方法，而Log接口具体由谁来实现呢？Mybatis提供了多种日志框架的实现，这些实现都匹配这个Log接口所定义的接口方法，最终实现了所有外部日志框架到Mybatis日志包的适配：
 
-![](\资源文件\202001100901Log接口.jpg)
+![](202001100901Log接口.jpg)
 
 比如对于Log4jImpl的实现来说，该实现持有了org.apache.log4j.Logger的实例，然后所有的日志方法，均委托该实例来实现。
 
@@ -414,11 +414,11 @@ public classLog4jImplimplementsLog{
 
 ​	装饰模式(Decorator Pattern) ：动态地给一个对象增加一些额外的职责(Responsibility)，就增加对象功能来说，装饰模式比生成子类实现更为灵活。其别名也可以称为包装器(Wrapper)，与适配器模式的别名相同，但它们适用于不同的场合。根据翻译的不同，装饰模式也有人称之为“油漆工模式”，它是一种对象结构型模式。
 
-![](E:\学习笔记\web相关\mybatis\资源文件\202001100901Decorator模式.jpg)
+![](202001100901Decorator模式.jpg)
 
 ​	在mybatis中，缓存的功能由根接口Cache（org.apache.ibatis.cache.Cache）定义。整个体系采用装饰器设计模式，数据存储和缓存的基本功能由PerpetualCache（org.apache.ibatis.cache.impl.PerpetualCache）永久缓存实现，然后通过一系列的装饰器来对PerpetualCache永久缓存进行缓存策略等方便的控制。如下图：
 
-![](\资源文件\202001100901Cache.jpg)
+![](202001100901Cache.jpg)
 
 用于装饰PerpetualCache的标准装饰器共有8个（全部在org.apache.ibatis.cache.decorators包中）：
 
@@ -448,11 +448,11 @@ SynchronizedCache–>LoggingCache–>SerializedCache–>ScheduledCache–>LruCac
 
 ​	迭代器（Iterator）模式，又叫做游标（Cursor）模式。GOF给出的定义为：提供一种方法访问一个容器（container）对象中各个元素，而又不需暴露该对象的内部细节。
 
-![](\资源文件\202001100901迭代器模式.jpg)
+![](202001100901迭代器模式.jpg)
 
 Java的Iterator就是迭代器模式的接口，只要实现了该接口，就相当于应用了迭代器模式： 
 
-![](E:\学习笔记\web相关\mybatis\资源文件\202001100901Iterator.jpg)
+![](202001100901Iterator.jpg)
 
 比如Mybatis的PropertyTokenizer是property包中的重量级类，该类会被reflection包中其他的类频繁的引用到。这个类实现了Iterator接口，在使用时经常被用到的是Iterator接口中的hasNext这个函数。
 
