--- a/疑问待解决.md
+++ b/疑问待解决.md
@@ -14,3 +14,43 @@
 
 
 
+# 20200318
+
+## 1.枚举 （**Enumeration** ）
+
+## 2.什么是bucket
+
+什么是bucket？Bucket可以理解为是存储空间。存储空间是您用于存储对象（Object）的容器，所有的对象都必须隶属于某个存储空间。您可以设置和修改存储空间属性用来控制地域、访问权限、生命周期等，这些属性设置直接作用于该存储空间内所有对象，因此您可以通过灵活创建不同的存储空间来完成不同的管理功能。
+
+同一个存储空间的内部是扁平的，没有文件系统的目录等概念，所有的对象都直接隶属于其对应的存储空间。
+每个用户可以拥有多个存储空间
+存储空间的名称在 OSS 范围内必须是全局唯一的，一旦创建之后无法修改名称。
+存储空间内部的对象数目没有限制。
+
+一、命名规范：
+只能包括小写字母、数字和短横线（-）。
+必须以小写字母或者数字开头和结尾。 
+长度必须在3-63字节之间。
+
+二、使用
+
+Bucket上传策略是一种直接从客户端向Bucket（存储空间）上传数据的便捷方式。通过上传策略中的规则以及与访问某些文件的相关逻辑，我们将展示如何拿到完整的Bucket对象列表，同时能够修改或删除Bucket中的现有文件。
+
+## 3. 数据结构树之AVL树
+
+https://www.cnblogs.com/linhaostudy/p/11300556.html
+
+https://blog.csdn.net/tanrui519521/article/details/80935348
+
+## 4. 数据结构树之RB-tree树
+
+https://www.cnblogs.com/yyxt/p/4983967.html
+
+## 5. 数据结构树之AA-tree树
+
+Java Cache-EHCache系列之AA-Tree实现溢出到磁盘的数据管理:https://blog.csdn.net/weixin_34174422/article/details/90626898
+
+https://blog.csdn.net/zhaojinjia/article/details/8121156
+
+## 6.hessian协议
+
