--- a/疑问待解决.md
+++ b/疑问待解决.md
@@ -54,3 +54,57 @@ https://blog.csdn.net/zhaojinjia/article/details/8121156
 
 ## 6.hessian协议
 
+# 20200.19
+
+## 1. Serializable和Externalizable
+
+https://my.oschina.net/wangmengjun/blog/1588096
+
+## 2.hashmap扩容机制及原理及jdk1.7与jdk1.8区别
+
+https://www.cnblogs.com/zhuoqingsen/p/8577646.html
+
+https://blog.csdn.net/yulungggg/article/details/94857345
+
+https://www.jianshu.com/p/937292c5d196
+
+## 3. ReentrantLock
+
+https://baijiahao.baidu.com/s?id=1648624077736116382&wfr=spider&for=pc
+
+https://blog.csdn.net/Pure_Eyes/article/details/100511192
+
+https://www.jianshu.com/p/54e90999ee47
+
+https://www.jianshu.com/p/937600554fb5
+
+## 4.Disruptor框架
+
+https://www.jianshu.com/p/d6375295fad4
+
+https://www.jianshu.com/p/1309dd03f81a
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
