--- a/疑问待解决.md
+++ b/疑问待解决.md
@@ -84,9 +84,21 @@ https://www.jianshu.com/p/d6375295fad4
 
 https://www.jianshu.com/p/1309dd03f81a
 
+# 20200320 
 
+## 1. java中克隆（clone）及深拷贝与浅拷贝
 
+https://blog.csdn.net/qq_33314107/article/details/80271963
 
+https://blog.csdn.net/qq_38962004/article/details/79721230
+
+https://www.jianshu.com/p/04ff0a7bf52b
+
+https://www.cnblogs.com/null00/archive/2010/12/14/2065088.html
+
+https://blog.csdn.net/zhangjg_blog/article/details/18369201
+
+## 2. Dozer,Commons-BeanUtils,cglib,Orika,Spring BeanUtils用于clone 他们分别是什么？
 
 
 
