--- a/java笔记/面向对象/相关知识点/面向对象与面向过程.md
+++ b/java笔记/面向对象/相关知识点/面向对象与面向过程.md
@@ -2,7 +2,7 @@
 
 ## 1.1 面向过程
 
-![](图片\面向过程编程.jpg)
+![](\java笔记\面向对象\image\面向过程编程.jpg)
 
 ```
 1）：面向过程就是分析出解决问题所需要的步骤，然后用函数把这些步骤一步一步实现，使用的时候一个一个依次调用就可以了。
@@ -12,9 +12,9 @@
 
 ## 1.2 面向对象
 
-![](图片\面向对象编程.jpg)
+![](\java笔记\面向对象\image\面向对象编程.jpg)
 
-![](图片\面向对象编程特点.jpg)
+![](\java笔记\面向对象\image\面向对象编程特点.jpg)
 
 ```
 1）：面向对象是以对象为中心的编程思想
