--- a/面试集锦/缓存/相关知识点/缓存雪崩、击穿、穿透.md
+++ b/面试集锦/缓存/相关知识点/缓存雪崩、击穿、穿透.md
@@ -38,4 +38,4 @@ setRedis（Key，value，time + Math.random() * 10000）；
 
 缓存击穿的话，设置热点数据永远不过期。或者加上互斥锁就能搞定了。
 
-![](缓存雪崩、穿透、击穿.jpg)
+![](\面试集锦\缓存\image\缓存雪崩、穿透、击穿.jpg)
