--- a/疑问待解决.md
+++ b/疑问待解决.md
@@ -126,6 +126,16 @@ https://www.cnblogs.com/qcloud1001/p/9322321.html
 
 
 
+# 20200410
+
+## 1.JSESSIONID是什么
+
+# 20200412
+
+## 1. 什么是饿汉式初始化和懒加载
+
+## 2.如何给spring容器提供配置元数据--基于Java的配置@Configuration, @Bean
+
 
 
 
