--- a/疑问待解决.md
+++ b/疑问待解决.md
@@ -136,13 +136,349 @@ https://www.cnblogs.com/qcloud1001/p/9322321.html
 
 ## 2.如何给spring容器提供配置元数据--基于Java的配置@Configuration, @Bean
 
+# Spring
+
+重点要掌握 Spring Framework。spring boot面试题
+
+11. IoC 属于哪种设计模式？
+
+12. 谈谈你对 Spring IoC 和 DI 的理解，它们有什么区别？
+
+13. 简单谈谈 IoC 容器的原理。spring boot面试题
+
+14. bean 的 scope 有几种类型？请详细列举。
+
+15. 说说 IoC 中的继承和 Java 继承的区别。
+
+16. IoC 中 car 对象的配置如下，现在要添加 user 对象，并且将 car 注入到 user 中，正确的配置是？
+
+<bean id="car" class="com.southwind.entity.Car"></bean>
+
+17. 请分别写出 IoC 静态工厂方法和实例工厂方法的配置。
+
+18. IoC 自动装载有几种方式？
+
+19. 介绍一下 Spring 框架中 bean 的生命周期。
+
+20. IoC 容器自动完成装载，默认的方式是？
+
+# 与 MyBatis 相关
+
+MyBatis 在实际项目开发中会与 Spring MVC 整合使用。
+
+21. 简单谈谈你对 Mybatis 的理解？
+
+22. MyBatis 接口绑定的优点是什么？
+
+23. 实现 MyBatis 接口绑定分别有哪几种方式?
+
+24. MyBatis 如何实现一对一关联关系？
+
+25. MyBatis 如何实现一对多关联关系？
+
+26. 说说 MyBatis 动态 SQL 的具体使用步骤?
+
+27. MyBatis 与 Hibernate 的区别是什么？
+
+28. MyBatis 如何实现模糊查询?
+
+29. Nginx 反向代理实现高并发的具体步骤是什么？
+
+30. Nginx 搭建 Tomcat 集群的核心配置应该怎么写？
+
+# 与 MongoDB 相关
+
+关注 MongoDB 基础以及 Spring 全家桶的整合方案 Spring Data MongoDB 的使用。
+
+31. 谈谈你对 MongoDB 的理解？
+
+32. MongoDB 有哪些特点？
+
+33. MongoDB 都有哪些主要功能？
+
+34. 说说你知道的 MongoDB 适用场景。
+
+35. 关闭 MongoDB 服务的命令是？
+
+36. MongoDB 创建数据库的命令是什么？
+
+37. 谈谈你对 Spring Data JPA 的理解？
+
+38. Spring Data JPA 删除多条记录并返回的代码是？
+
+39. 谈谈 Spring Data JPA 的底层实现。
+
+40. Spring AOP 的原理是什么？都有哪些具体的应用场景？
+
+# Spring Boot
+
+Spring 全家桶的重头戏，Spring Boot 作为一个快速构建 Spring 应用的利器，对各种主流框架模块做了很好的集成，开箱即用。
+
+41. 谈谈你对 Spring Boot 的理解？
+
+42. Spring Boot 的优势是什么？为什么要使用 Spring Boot？
+
+43. Spring Boot 的配置文件有几种格式？区别是什么？
+
+44. 谈谈你知道的 Spring Boot 核心注解。
+
+45. 如何自动开启 Spring Boot 各个组件？
+
+46. Spring Boot 中 starter 的原理是什么？
+
+47. Spring Boot 不能使用 XML 配置，这句话对吗?
+
+48. 谈谈你对 Redis 的理解。
+
+49. 简单说说 Redis 的实现原理。
+
+50. 什么是 Thymeleaf？
+
+# Spring Cloud
+
+Spring Cloud 作为 Spring 中最热门的模块，包括服务网关、Ribbon、Feign、Hystrix、Spring Cloud Config 等，专注实际开发中常用的技能点，同时具备使用 Spring Cloud 搭建微服务架构的能力。spring boot面试题
+
+51. 什么是 Spring Cloud？
+
+52. Spring Cloud 和 Spring 之间有什么关联关系？
+
+53. Spring Cloud 实现服务注册和发现的原理是什么？
+
+54. Ribbon 和 Feign 有什么区别？
+
+55. 为什么要使用 Spring Cloud 熔断器，它的作用是什么？
+
+56. 什么是 Hystrix？
+
+57. Eureka 和 ZooKeeper 有哪些区别？
+
+58. 为什么要使用负载均衡？
+
+59. Spring Cloud 实现服务注册和发现的具体流程是什么？
+
+60. 为什么要使用 Spring Cloud ，它有哪些优势？
+
+# 微服务项目实战相关
+
+实际工作中 Spring 微服务项目的问题。
+
+61. 谈谈你对微服务的理解。
+
+62. 微服务分别有哪些优点，哪些缺点？
+
+63. 谈谈微服务之间是如何实现通信的。
+
+64. Spring Boot 如何集成 MyBatis？
+
+65. Spring Boot 和 Spring Cloud 有哪些区别？
+
+66. 使用 layui 的数据表格组件展示业务数据，后台实体类应该如何定义
+
+67. JPA 和 Spring Data JPA 是一回事吗？
+
+68. 如果要给项目添加权限管理系统，一般包含哪些需求？
+
+69. 微服务架构的拆分都有哪些原则？
+
+70. Feign 和 Ribbon+RestTemplate 的区别是什么？
+
+# 1 Dubbo
 
 
 
+ 1.1 服务调用超时问题怎么解决？
+
+ 1.2 Dubbo支持哪些序列化方式？
+
+ 1.3 Dubbo和SpringCloud的关系？
+
+ 1.4 Dubbo的架构设计？一共划分了哪些层？
+
+ 1.5 Dubbo的默认集群容错方案？
+
+ 1.6 Dubbo使用的是什么通信框架?
+
+ 1.7 Dubbo的主要应用场景？
+
+ 1.8 Dubbo服务注册与发现的流程？流程说明。
+
+ 1.9 Dubbo的集群容错方案有哪些？
+
+ 1.10 Dubbo的四大组件
+
+ 1.11 Dubbo在安全机制方面是如何解决的
+
+ 1.12 Dubbo和SpringCloud的区别？
+
+ 1.13 Dubbo支持哪些协议，每种协议的应用场景，优缺点？
+
+ 1.14 Dubbo的核心功能有哪些？
+
+ 1.15 Dubbo的注册中心集群挂掉，发布者和订阅者之间还能通信么？
+
+ 1.16 Dubbo的集群容错方案有哪些？
+
+ 1.17 Dubbo集群的负载均衡有哪些策略
+
+ 1.18 Dubbo 在安全机制方面是如何解决的
+
+ 1.19 为什么需要服务治理？
+
+ 1.20 Dubbo超时时间怎样设置？
+
+# 2 ElasticSearch
 
 
 
+ 2.1 你们公司的ES集群，一个node一般会分配几个分片？
 
+ 2.2 Elasticsearch是如何实现Master选举的？
+
+ 2.3 你是如何做写入调优的？
+
+ 2.4 如何避免脑裂？
+
+ 2.5 19-Elasticsearch对于大数据量（上亿量级）的聚合如何实现？
+
+ 2.6 ES主分片数量可以在后期更改吗？为什么？
+
+ 2.7 ES主分片数量可以在后期更改吗？为什么？
+
+ 2.8 如何监控集群状态？
+
+ 2.9 ElasticSearch中的副本是什么？
+
+ 2.10 20-Elasticsearch是如何实现Master选举的？
+
+ 2.11 20.ES更新数据的执行流程？
+
+ 2.12 shard里面是什么组成的？
+
+ 2.13 ElasticSearch中的分析器是什么？
+
+ 2.14 什么是脑裂？
+
+ 2.15 20-Elasticsearch是如何实现Master选举的
+
+ 2.16 客户端在和集群连接时，如何选择特定的节点执行请求的？
+
+ 2.17 Elasticsearch中的倒排索引是什么？
+
+ 2.18 什么是脑裂？
+
+ 2.19 什么是索引？索引（名词） 一个索引(index)
+
+ 2.20 详细描述一下Elasticsearch更新和删除文档的过程
+
+# 3 JVM
+
+
+
+ 3.1 JVM参数主要有⼏种分类
+
+ 3.2 3.Java中会存在内存泄漏吗，简述一下。
+
+ 3.3 Java虚拟机是如何判定两个Java类是相同的？
+
+ 3.4 Java 中都有哪些引用类型
+
+ 3.5 在 Java 中，对象什么时候可以被垃圾回收？
+
+ 3.6 19.StackOverflow异常有没有遇到过？一般你猜测会在什么情况下被触发？
+
+ 3.7 堆空间分哪些部分？以及如何设置各个部分？
+
+ 3.8 什么是栈帧？栈帧存储了什么？
+
+ 3.9 如何设置参数生成GC日志？
+
+ 3.10 GC 是什么？为什么要有 GC？
+
+ 3.12 使用过哪些jdk命令，并说明各个的作用是什么
+
+ 3.13 JVM运行时数据区区域分为哪⼏部分？
+
+ 3.14 是否了解类加载器双亲委派模型机制和破坏双亲委派模型？
+
+ 3.15 逃逸分析有几种类型？
+
+ 3.16 -Xms这些参数的含义是什么？
+
+ 3.17 你知道哪几种垃圾收集器,各自的优缺点，重点讲下cms和G1，包括原理，流程，优缺点。
+
+ 3.18 JVM的内存结构，Eden和Survivor比例是多少？
+
+# 4 多线程/高并发
+
+
+
+ 4.1 负载平衡的意义什么？
+
+ 4.2 请说出同步线程及线程调度相关的方法？
+
+ 4.3 关于epoll和select的区别，哪些说法 是正确的？（多选） 
+
+A. epoll 和 select 都是 I/O 多路复用的技术，都可以实现同时监听 多个I/O事件的状态。 
+
+B. epoll 相比 select 效率更高，主要是基于其操作系统支持的 I/O 事件通知机制，而select是基于轮询机制。 
+
+C. epoll支持水平触发和边沿触发两种模式。 
+
+D. select能并行支持I/O比较小，且无法修改。
+
+ 4.4 启动一个线程是调用run()方法还是start()方法？
+
+ 4.5 如何确保N个线程可以访问N个资源同时又不导致死锁？
+
+ 4.6 编写多线程程序的几种实现方式（换个问法：创建多线程的方式）？
+
+ 4.7 线程和进程的区别？
+
+ 4.8 什么是线程池，有哪些常用线程池？
+
+ 4.9 什么是死锁？
+
+ 4.10 怎么保证缓存和数据库数据的一致性？
+
+# 5 消息中间件
+
+
+
+ 5.1 消费者获取消息有几种模式？
+
+ 5.2 17.RocketMQ的特点有哪些？
+
+ 5.3 kafka 同时设置了 7 天和 10G 清除数据，到第五天的时候消息达到了 10G，这个时候 kafka将如何处理？
+
+ 5.4 为何需要Kafka集群
+
+ 5.5 Kafka 数据存储设计
+
+ 5.6 Kafka如何判断一个节点是否存活？
+
+ 5.7 kafka消息发送的可靠性机制有几种
+
+ 5.8 请详细说一下推送模式和拉取模式。
+
+ 5.9 Kafka 与传统消息系统之间有三个关键区别
+
+ 5.10 RocketMQ 由哪些角色组成？
+
+ 5.12 23.Kafka的消费者如何消费数据
+
+ 5.13 Kafka的优点
+
+ 5.14 Kafka 的设计时什么样的呢？
+
+ 5.15 说说你对Consumer的了解？
+
+ 5.16 Kafka新建的分区会在哪个目录下创建
+
+ 5.17 说一下Kafka消费者消费过程
+
+ 5.18 介绍下Kafka
+
+ 5.19 什么情况会导致Kafka运行变慢？
 
 
 
