--- a/疑问待解决.md
+++ b/疑问待解决.md
@@ -482,5 +482,23 @@ D. select能并行支持I/O比较小，且无法修改。
 
 
 
+# 20201014
+
+对于一个AtomicInteger原子类说，CAS操作可以看为内存V,旧值A,新值B,举个例子来说,当经历自旋失败后，就是当V=15,A=10,B=11时，他还是失败的，V>A了，此时V和A还可能相等吗？这样继续自旋下去有没有意义？？  当时把我给问懵了，查了查资料，但是还是有一些疑惑点？
+
+`getandAndInt(Object val1, long var2, int var4){
+            int var5;
+            do{
+                var5 = this.getIntVolatile(var1, var2);
+            }while (!this.compareAndSwapInt(var1, var2, var5, var5 + var4));
+        })`
+真实执行CAS的就是this.compareAndSwapInt(var1, var2, var5, var5 + var4)这条语句，其中：
+var1 , var2 确定了内存值
+var5 是旧值
+var5+var4 是新值
+其中的getIntVolatile是获得内存值的方法获取旧值的方法？假如现在先获取到var5=10，然后内存值为15，为false；则继续自旋，那么在下一步的循环中，var5=this.getIntVolatile(var1, var2)的值是10呢？还是可能会被更改为15？，如果发生更改，在哪里体现了个这个更改操作？（在while循环中不是var1,var2值没变吗，然后调用this.getIntVolatile(var1, var2),他的值还是不变啊），那么它有没有可能自旋成功？会不会是个死循环呢？
+
+
+
 
 
